add 4 new tasks to ToDo.txt

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,12 +8,17 @@ My TO-DO List
 
 4. Attend class on time
 
-5. Visit library every friday
+5. Visit library every Friday
 
 6. Apply for IT jobs.
 
+7.Enrol for short courses in IT
 
+8.Complete the course
 
+9.Get certified
+
+10.Apply for new IT job
 
 
 
